[package]
name = "cricket-game-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlAudioElement",
    "HtmlMediaElement",
] }
rand = { version = "0.8", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] } 